--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -79,3 +79,20 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+.markdown-content p,
+.markdown-content ul,
+.markdown-content ol,
+.markdown-content h1,
+.markdown-content h2,
+.markdown-content h3 {
+  margin-bottom: 1em;
+}
+
+.markdown-content ul,
+.markdown-content ol {
+  padding-left: 1.5em; /* Indentation for lists */
+}
+
+.markdown-content li {
+  margin-bottom: 0.5em; /* Space between list items */
+}
